# daling

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  Makefile  docker-compose.yml  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_production_schema.py
backend/app/: __init__.py  cli.py  main.py
backend/app/agents/: __init__.py  base.py  chapter_planner.py  chief_editor.py  continuity_guard.py  critic.py  drafter.py  memory_keeper.py  rewriter.py  story_architect.py
backend/app/api/: __init__.py  continuous.py  production_guard.py  routes_book_memory.py  routes_brain.py  routes_canon.py  routes_chat_create.py  routes_cockpit.py  routes_evolution.py  routes_usage.py  (+6 more)
backend/tests/: conftest.py  test_agent_cost.py  test_autonomous_learning.py  test_chat_create_flow.py  test_continuity_failure.py  test_continuous_production.py  test_critic_failure.py  test_drafter_failure.py  test_evolution_contract.py  test_gateway_cache.py  test_json_agent_budget.py  test_memory_governance.py  test_memory_protection.py  test_pipeline_quality_gate.py  test_planner_failure.py  test_production_safety_contract.py  test_project_creation_config.py  test_prompt_evolution.py  test_provider_health.py  test_provider_mutation_contract.py  test_quality_ledger.py  test_review_workflow.py  test_rewriter_failure.py  test_story_architect_outline_compaction.py  test_storyline_workbench.py  test_streaming_text.py
(+145 files in other folders)
